--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -22,7 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:outlineSpotShadowColor="@color/blue"
         app:layout_constraintGuide_percent="0.8"/>
 
     <LinearLayout
@@ -60,7 +59,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
-        android:text="Skip"
+        android:text="@string/skip"
         android:fontFamily="@font/montserrat_medium"
         android:textSize="14sp"
         android:textColor="@color/blackP"
