--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragment.AccountFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -159,7 +160,8 @@
                         android:layout_height="35dp"
                         android:layout_gravity="center"
                         android:background="@android:color/transparent"
-                        android:src="@drawable/ic_behance" />
+                        android:src="@drawable/ic_behance"
+                        android:contentDescription="@string/btn_account" />
 
                 </com.meetsl.scardview.SCardView>
             </LinearLayout>
@@ -227,8 +229,8 @@
                         android:orientation="horizontal">
 
                         <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
                             android:layout_marginStart="16dp"
                             android:background="@android:color/transparent"
                             android:src="@drawable/ic_aboutapp" />
@@ -333,4 +335,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
